...
                    Text("No Statecharts found")
                        .foregroundStyle(.secondary)
                }
            }
        }
        .searchable(text: $searchText, prompt: "Search machines")
        .navigationTitle("Statecharts")

        .toolbar {
            ToolbarItem(placement: .primaryAction) {
                HStack {
                    Button(action: { isImporting = true }) {
                        Label("Load Folder", systemImage: "folder")
                    }
                    Button(action: { createMachine() }) {
                        Label("New Chart", systemImage: "plus")
                    }
                }
            }
        }
        .fileImporter(
            isPresented: $isImporting,
...
